recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:2: error: Missing closing brace `}' assumed here
def nth(l:List[Int], n:Int): Int = {
^Nth:2: error: expected class or object definition
def nth(l:List[Int], n:Int): Int = {
^